sort by (task III)

--- a/expenses/templates/expenses/expense_list.html
+++ b/expenses/templates/expenses/expense_list.html
@@ -9,6 +9,10 @@
   From:<input name="start_date" type="date">
   To:<input name="end_date" type="date">
   <input name="amount" type="number" placeholder="Amount">
+	<input name="order" list="sorting" placeholder="Order by">
+	<datalist id="sorting">
+		<option value="category ascending"><option value="category descending"><option value="date ascending"><option value="date descending">
+	</datalist>
   <button type="submit">search</button>
 </form>
 <br>
