total amount spend (task IV)

--- a/expenses/templates/expenses/expense_list.html
+++ b/expenses/templates/expenses/expense_list.html
@@ -63,4 +63,11 @@
 	{% endfor %}
   </tr>
 </table>
+<hr>
+<table border="1">
+	<tr>
+		<td>Total amount spend</td>
+		<td>{{total_amount_spent.s|floatformat:2}}</td>
+	</tr>
+</table>
 {% endblock %}
