spend by month (task V)

--- a/expenses/templates/expenses/expense_list.html
+++ b/expenses/templates/expenses/expense_list.html
@@ -70,4 +70,16 @@
 		<td>{{total_amount_spent.s|floatformat:2}}</td>
 	</tr>
 </table>
+<hr>
+<table border="1">
+  <caption>Summary per year-month</caption>
+  <tr>
+    {% for month, total in summary_per_month.items %}
+	<tr>
+		<td>{{month|date:"M Y"}}:</td>
+		<td>{{total|floatformat:2}}</td>
+	</tr>
+	{% endfor %}
+  </tr>
+</table>
 {% endblock %}
